@@ -652,6 +652,7 @@ test_run_ajp_client_SOURCES = test/run-ajp-client.c \
 	src/growing-buffer.c src/socket-util.c src/fd-util.c \
 	src/istream-file.c \
 	src/istream-cat.c \
+	src/istream-memory.c \
 	src/istream-forward.c \
 	src/istream-ajp-body.c \
 	src/event2.c \
